Added pictures, second attempt to Slack web

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1></h1>
     <p></p>
     <button></button>
-    <img src="" alt="">
+    <img src="https://a.slack-edge.com/43f70/marketing/img/home/home_illo.es-ES.png" alt="Personas usando la web de Slack">
   </section> 
   
   <section class="work-guide">
@@ -27,24 +27,24 @@
       <h2></h2>
     </header>  
     <div class="work-guide-articles">
-      <img src="" alt="">
-      <h3></h3>
-      <p></p>
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/organized-convos@2x.png" alt="conversación">
+      <h3>Canales</h3>
+      <p>En Slack, los equipos se comunican a través de canales, que puedes organizar por proyectos, temas, departamentos o lo que tenga sentido para ti.</p>
     </div>
     <div class="work-guide-articles">
-      <img src="" alt="">
-      <h3></h3>
-      <p></p>
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/search-binoculars@2x.png" alt="prismáticos">
+      <h3>Búsqueda</h3>
+      <p>A través de la búsqueda, todo el mundo pueda acceder a las conversaciones en Slack, por lo que la información siempre está a un clic de distancia.</p>
     </div>
     <div class="work-guide-articles">
-      <img src="" alt="">
-      <h3></h3>
-      <p></p>
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/apps-gears@2x.png" alt="integraciones">
+      <h3>Integraciones</h3>
+      <p>Slack es compatible con las herramientas y los servicios que usas a diario. Trae la información que necesitas o ejecuta tareas sin salir de Slack.</p>
     </div>
     <div class="work-guide-articles">
-      <img src="" alt="">
-      <h3></h3>
-      <p></p>
+      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/security-lock@2x.png" alt="seguridad">
+      <h3>Seguridad</h3>
+      <p>En Slack nos tomamos en serio la seguridad. Ofrecemos medidas como la autenticación de dos factores y el inicio de sesión único para garantizar la seguridad de tus datos y proteger tu organización.</p>
     </div>
     <a href="" class="work-guide-link">Más información sobre las funciones de Slack</a>
   </section>
@@ -58,8 +58,9 @@
     <a href="">
       <div class="container">
         <header>
-          <span></span>
-          <h3></h3>
+          <span>LVMH/Benefic Cosmetics</span>
+          <h3>Embelleciendo el mundo con un guiño y una sonrisa (y Slack).</h3>
+          <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/benefit/card_benefit.jpg" alt="Cuadros colgados">
         </header>
       </div>
     </a>
@@ -69,17 +70,19 @@
     <a href="">
       <div class="container">
         <header>
-          <span></span>
-          <h3></h3>
+          <span>Centro de Innovación Johns Hopkins Sibley</span>
+          <h3>La transformación de la antención al paciente gracias a Slack.</h3>
+          <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/hopkins/card_hopkins.jpg" alt="Profesor explicando en pizarra">
         </header>
       </div>
     </a>
   </div>
   <div class="company-news">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="https://a.slack-edge.com/c04e5/marketing/img/logos/company/ticketmaster@2x.png" alt="Logo Ticketmaster">
+    <img src="https://a.slack-edge.com/f3b02/marketing/img/logos/company/airbnb-alt@2x.png" alt="Logo AirBnb">
+    <img src="https://a.slack-edge.com/adeaf1/marketing/img/logos/company/target-alt@2x.png" alt="Logo Target">
+    <img src="https://a.slack-edge.com/c04e5/marketing/img/logos/company/capital_one@2x.png" alt="Logo CapitalOne">
+    <img src="https://a.slack-edge.com/c04e5/marketing/img/logos/company/oracle@2x.png" alt="Logo Oracle">
   </div>
 </section>
 
