First attempt at Slack web with CSS

--- a/index.html
+++ b/index.html
@@ -4,45 +4,57 @@
 <head>
   <title>Donde tu trabajo Fluye | Slack</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="./css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <img src="http://assets.stickpng.com/thumbs/5900c77916ae4b3fc58f4823.png" alt="Logo Slack">
-      <img src="https://cdn1.iconfinder.com/data/icons/android-user-interface-vol-1/16/38_-_menu_bar_lines_option_list_hamburger_web-128.png" alt="Burguer Menu">
-    </nav>
+  <header class="header">
+    <div class="container"> 
+      <img class="slack-logo" src="./images/slack-logo-2.png" alt="Logo Slack">
+      <nav class="nav-bar">
+        <img class="burger-menu" src="./images/burger-menu.png" alt="Burguer Menu">
+        <ul>
+          <li>¿Por qué Slack?</li>
+          <li>Precios</li>
+          <li>Conócenos</li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section class="main">
-    <h1></h1>
-    <p></p>
-    <button></button>
-    <img src="https://a.slack-edge.com/43f70/marketing/img/home/home_illo.es-ES.png" alt="Personas usando la web de Slack">
+
+  <section class="main container">
+    <h1>Transforma tu forma de trabajar</h1>
+    <p>Cuando tu equipo tiene que echar a andar un proyecto, contratar un empleado, 
+      subir unas líneas de código, revisar un contrato de ventas, finalizar el presupuesto del 
+      próximo año, medir una prueba A/B, planificar la apertura de tu próxima oficina o cualquier 
+      otra situación, siempre puedes contar con Slack.</p>
+    <button class="button blue">Primeros pasos</button>
+    <img src="./images/mirando-el-movil.png" alt="Personas usando la web de Slack">
   </section> 
   
   <section class="work-guide">
     <header class="work-guide-header">
-      <h2></h2>
+      <h2>El eje que reúne a tu equipo y guía tu trabajo</h2>
     </header>  
     <div class="work-guide-articles">
-      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/organized-convos@2x.png" alt="conversación">
+      <img class="work-guide-image" src="./images/bocadillos.png" alt="conversación">
       <h3>Canales</h3>
       <p>En Slack, los equipos se comunican a través de canales, que puedes organizar por proyectos, temas, departamentos o lo que tenga sentido para ti.</p>
     </div>
     <div class="work-guide-articles">
-      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/search-binoculars@2x.png" alt="prismáticos">
+      <img class="work-guide-image" src="./images/prismaticos.png" alt="prismáticos">
       <h3>Búsqueda</h3>
       <p>A través de la búsqueda, todo el mundo pueda acceder a las conversaciones en Slack, por lo que la información siempre está a un clic de distancia.</p>
     </div>
     <div class="work-guide-articles">
-      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/apps-gears@2x.png" alt="integraciones">
+      <img class="work-guide-image" src="./images/engranaje.png" alt="integraciones">
       <h3>Integraciones</h3>
       <p>Slack es compatible con las herramientas y los servicios que usas a diario. Trae la información que necesitas o ejecuta tareas sin salir de Slack.</p>
     </div>
     <div class="work-guide-articles">
-      <img src="https://a.slack-edge.com/ce89a/marketing/img/features/icons/security-lock@2x.png" alt="seguridad">
+      <img class="work-guide-image" src="./images/seguridad.png" alt="seguridad">
       <h3>Seguridad</h3>
       <p>En Slack nos tomamos en serio la seguridad. Ofrecemos medidas como la autenticación de dos factores y el inicio de sesión único para garantizar la seguridad de tus datos y proteger tu organización.</p>
     </div>
@@ -50,8 +62,8 @@
   </section>
 <section class="news">
   <header>
-    <h2></h2>
-    <p></p>
+    <h2>Estás en buena compañía</h2>
+    <p>Slack transforma la forma de trabajar de miles de personas en todo el mundo.</p>
   </header>
 
   <div>
