--- a/index.html
+++ b/index.html
@@ -61,42 +61,44 @@
     <a href="" class="work-guide-link">Más información sobre las funciones de Slack</a>
   </section>
 <section class="news">
-  <header>
+  <header class="container"> 
     <h2>Estás en buena compañía</h2>
     <p>Slack transforma la forma de trabajar de miles de personas en todo el mundo.</p>
   </header>
 
   <div>
-    <a href="">
+    <a href="https://slack.com/intl/es-es/customer-stories/benefit" class="news-link">
       <div class="container">
-        <header>
+        <header class="header-news">
           <span>LVMH/Benefic Cosmetics</span>
           <h3>Embelleciendo el mundo con un guiño y una sonrisa (y Slack).</h3>
         </header>
         <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/benefit/card_benefit.jpg" alt="Cuadros colgados">
         <footer>
-          <span>Leer historia</span>
-          <img src="https://cdn1.iconfinder.com/data/icons/android-user-interface-vol-1/16/38_-_menu_bar_lines_option_list_hamburger_web-128.png" alt="burguer menu">
+          <span class="news-leer">Leer historia</span>
+          <img src="./images/burger-menu.png" alt="burguer menu">
         </footer> 
       </div>
     </a>
    </div>
 
    <div> 
-    <a href="">
+    <a href="https://slack.com/intl/es-es/customer-stories/johns-hopkins" class="news-link">
       <div class="container">
-        <header>
+        <header class="header-news">
           <span>Centro de Innovación Johns Hopkins Sibley</span>
           <h3>La transformación de la antención al paciente gracias a Slack.</h3>
         </header>
         <img src="https://a.slack-edge.com/d5ae6e/marketing/img/customers/hopkins/card_hopkins.jpg" alt="Profesor explicando en pizarra">
-        <footer>
+        <footer class="news-footer">
          <span>Leer historia</span>
-         <img src="https://cdn1.iconfinder.com/data/icons/android-user-interface-vol-1/16/38_-_menu_bar_lines_option_list_hamburger_web-128.png" alt="burguer menu">
+         <img src="./images/burger-menu.png" alt="burguer menu">
         </footer> 
       </div>
     </a>
+    
   </div>
+  
   <div class="company-news">
     <img src="https://a.slack-edge.com/c04e5/marketing/img/logos/company/ticketmaster@2x.png" alt="Logo Ticketmaster">
     <img src="https://a.slack-edge.com/f3b02/marketing/img/logos/company/airbnb-alt@2x.png" alt="Logo AirBnb">
